# bulgarian-english-podcast

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  bishop-history.md  find_article.py  lambert-history.md  main.py  package.json  pyproject.toml  requirements.txt  ripley-history.md  serve_with_flask.py  test_langbly_key.py  test_translate_demo.py  translator_test_simple.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: squad.md
.github/workflows/: python-ci.yml
.squad/: .first-run  cleanup.bat  commit-message.txt  commit-msg.txt  decisions.md  routing.md  scribe-commit-msg.txt  scribe-commit.bat  taskboard.json  team.md
.squad/agents/ash/: charter.md  history.md
.squad/agents/bishop/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/duplicates/: README.md  test_output.txt
.squad/history/: parker-history.md  ripley-history.md
.squad/identity/: now.md  wisdom.md
.squad/plugins/: marketplaces.json
.squad/templates/: ceremony-reference.md  copilot-agent.md  human-members.md  prd-intake.md  ralph-reference.md
data/: scheduler_state.json
data/articles/: vijte-1532-kolko-tezhi-edna-leka-muha.html
data/scripts/: vijte-1532-kolko-tezhi-edna-leka-muha.translation.txt  vijte-1532-kolko-tezhi-edna-leka-muha.txt
src/knigovishte_podcast/: cli.py  config.py  models.py  pipeline.py  web.py
tests/: test_article_selector.py  test_cli.py  test_dedup.py  test_fetcher.py  test_pipeline.py  test_rss.py  test_scheduler.py  test_script_builder.py  test_translator.py  test_tts.py  test_web.py
(+32 files in other folders)
